Fix full-bleed section

--- a/style.css
+++ b/style.css
@@ -140,28 +140,24 @@ footer button {
         justify-content: center;
     }
 
-    section:not(.full-bleed-section) {
+    section {
         padding-inline: 10%;
     }
 
-    .full-bleed-section {
+    .middle-section {
+        padding-inline: 0;
+    }
+
+    .full-bleed {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding-inline: 10rem;
-    }
+        grid-template-columns: 50vw 30vw;
+        align-items: center;
+        column-gap: 9rem;
 
-    .full-bleed-section__header {
-        grid-column: 1 / -1;
-    }
-
-    .full-bleed-section img {
         position: relative;
-        left: -35%;
-    }
+        left: -5%;
 
-    .full-bleed-section ul {
-        position: relative;
-        left: -25%;
+        text-align: left;
     }
 
     .lower-section ul {
